<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Bmi_acti">

    <ImageView
        android:id="@+id/Back_button_bmi_ac"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/Bmi_ac_back_button_description"
        android:onClick="click_backBtn_BmiAc"
        android:src="@drawable/left_arrow_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Heading_bmi_ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Bmi_ac_heading_one"
        android:textColor="@color/white_shine"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Reset_button_bmi_ac"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/Bmi_ac_reset_button_description"
        android:src="@drawable/refresh_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Weight_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/Bmi_ac_text_one"
        android:textColor="@color/white_shine"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Heading_bmi_ac" />

    <EditText
        android:id="@+id/input_weight"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_vertical|end"
        android:hint="@string/Bmi_ac_hint_one"
        android:inputType="numberDecimal"
        android:textColor="#F57F17"
        android:textColorHint="#F57F17"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Weight_text"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Weight_text_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bmi_ac_text_one_small"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/input_weight"
        app:layout_constraintStart_toStartOf="@+id/input_weight"
        app:layout_constraintTop_toBottomOf="@+id/input_weight" />

    <TextView
        android:id="@+id/Height_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/Bmi_ac_text_two"
        android:textColor="@color/white_shine"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/Weight_text"
        app:layout_constraintStart_toStartOf="@+id/Weight_text"
        app:layout_constraintTop_toBottomOf="@+id/Weight_text" />

    <EditText
        android:id="@+id/input_height"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:ems="10"
        android:gravity="center_vertical|end"
        android:hint="@string/Bmi_ac_hint_two"
        android:inputType="numberDecimal"
        android:textColor="#F57F17"
        android:textColorHint="#F57F17"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Height_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/Go_btn_bmi_ac"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/shape_go_btn"
        android:text="@string/Bmi_ac_Go_button"
        android:textColor="#F57F17"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/result_one_bmi_ac"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Height_text_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bmi_ac_text_two_small"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/input_height"
        app:layout_constraintStart_toStartOf="@+id/input_height"
        app:layout_constraintTop_toBottomOf="@+id/input_height" />

    <TextView
        android:id="@+id/result_one_bmi_ac"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/Height_text"
        app:layout_constraintStart_toStartOf="@+id/Height_text"
        app:layout_constraintTop_toBottomOf="@+id/Height_text" />

    <TextView
        android:id="@+id/result_two_bmi_ac"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/result_one_bmi_ac"
        app:layout_constraintTop_toBottomOf="@+id/result_one_bmi_ac" />

</android.support.constraint.ConstraintLayout>